correcting version.h to avmplusversion.h

--- a/trunk/mozilla/js/tamarin/platform/win32/avmplus_8.vcproj
+++ b/trunk/mozilla/js/tamarin/platform/win32/avmplus_8.vcproj
@@ -805,6 +805,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\core\avmplusVersion.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\core\BigInteger.h"
 				>
 			</File>
