slight change to project

--- a/trunk/mozilla/js/tamarin/platform/win32/shell_8.vcproj
+++ b/trunk/mozilla/js/tamarin/platform/win32/shell_8.vcproj
@@ -404,6 +404,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\extensions\StandardClass.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\shell\StringBuilderClass.cpp"
 				>
 			</File>
@@ -467,6 +471,14 @@
 			</File>
 			<File
 				RelativePath="..\..\extensions\JavaGlue.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\shell\redtamarinVersion.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\extensions\StandardClass.h"
 				>
 			</File>
 			<File
