patch win32 compatibility

--- a/trunk/src/MMgc/MMgc2008.vcproj
+++ b/trunk/src/MMgc/MMgc2008.vcproj
@@ -20,9 +20,9 @@
 		/>
 	</Platforms>
 	<ToolFiles>
-		<DefaultToolFile
+<!--<DefaultToolFile
 			FileName="armasm.rules"
-		/>
+		/>-->
 	</ToolFiles>
 	<Configurations>
 		<Configuration
