--- a/trunk/platform/win32/shell2008.vcproj
+++ b/trunk/platform/win32/shell2008.vcproj
@@ -47,7 +47,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
+				AdditionalIncludeDirectories="..\..\VMPI;..\..\vmbase;..\..\shell;..\..\extensions;..\..\MMgc;&quot;..\..\other-licenses\zlib&quot;;..\..\core;..\..\eval;.;.."
 				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;_DEBUG;_CONSOLE;USE_REAL2INT;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="false"
 				ExceptionHandling="0"
@@ -77,7 +77,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/FIXED:NO"
 				AdditionalDependencies="winmm.lib DbgHelp.lib shlwapi.lib"
-				OutputFile="$(OutDir)/avmplus_d.exe"
+				OutputFile="$(OutDir)/avm.exe"
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
 				RandomizedBaseAddress="1"
@@ -132,7 +132,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
+				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\vmbase;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
 				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;_DEBUG;_CONSOLE;USE_REAL2INT;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="false"
 				ExceptionHandling="0"
@@ -162,7 +162,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/FIXED:NO"
 				AdditionalDependencies="winmm.lib shlwapi.lib"
-				OutputFile="$(OutDir)/avmplus_d_64.exe"
+				OutputFile="$(OutDir)/avm.exe"
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
 				LargeAddressAware="2"
@@ -219,7 +219,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="3"
 				FavorSizeOrSpeed="2"
-				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
+				AdditionalIncludeDirectories="..\..\VMPI;..\..\vmbase;..\..\shell;..\..\extensions;..\..\MMgc;&quot;..\..\other-licenses\zlib&quot;;..\..\core;..\..\eval;.;.."
 				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;NDEBUG;_CONSOLE;USE_REAL2INT;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -248,7 +248,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions=""
 				AdditionalDependencies="winmm.lib"
-				OutputFile="$(OutDir)/avmplus.exe"
+				OutputFile="$(OutDir)/avm.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
@@ -306,7 +306,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				FavorSizeOrSpeed="2"
-				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
+				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\vmbase;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
 				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;NDEBUG;_CONSOLE;USE_REAL2INT;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -335,7 +335,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions=""
 				AdditionalDependencies="winmm.lib"
-				OutputFile="$(OutDir)/avmplus_64.exe"
+				OutputFile="$(OutDir)/avm.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
@@ -394,7 +394,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="3"
 				FavorSizeOrSpeed="2"
-				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
+				AdditionalIncludeDirectories="..\..\VMPI;..\..\vmbase;..\..\shell;..\..\extensions;..\..\MMgc;&quot;..\..\other-licenses\zlib&quot;;..\..\core;..\..\eval;.;.."
 				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;NDEBUG;_CONSOLE;USE_REAL2INT;DEBUGGER;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -423,7 +423,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions=""
 				AdditionalDependencies="winmm.lib"
-				OutputFile="$(OutDir)/avmplus_s.exe"
+				OutputFile="$(OutDir)/avm.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
@@ -480,7 +480,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="3"
 				FavorSizeOrSpeed="2"
-				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
+				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\vmbase;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
 				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;NDEBUG;_CONSOLE;USE_REAL2INT;DEBUGGER;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -509,7 +509,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions=""
 				AdditionalDependencies="winmm.lib"
-				OutputFile="$(OutDir)/avmplus_s_64.exe"
+				OutputFile="$(OutDir)/avm.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
@@ -565,7 +565,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
+				AdditionalIncludeDirectories="..\..\VMPI;..\..\vmbase;..\..\shell;..\..\extensions;..\..\MMgc;&quot;..\..\other-licenses\zlib&quot;;..\..\core;..\..\eval;.;.."
 				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;_DEBUG;_CONSOLE;USE_REAL2INT;DEBUGGER;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="false"
 				ExceptionHandling="0"
@@ -595,7 +595,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/FIXED:NO"
 				AdditionalDependencies="winmm.lib DbgHelp.lib shlwapi.lib"
-				OutputFile="$(OutDir)/avmplus_sd.exe"
+				OutputFile="$(OutDir)/avm.exe"
 				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
@@ -650,7 +650,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
+				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\vmbase;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
 				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;_DEBUG;_CONSOLE;USE_REAL2INT;DEBUGGER;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="false"
 				ExceptionHandling="0"
@@ -680,7 +680,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/FIXED:NO"
 				AdditionalDependencies="winmm.lib shlwapi.lib"
-				OutputFile="$(OutDir)/avmplus_sd_64.exe"
+				OutputFile="$(OutDir)/avm.exe"
 				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
@@ -737,8 +737,8 @@
 				Name="VCCLCompilerTool"
 				Optimization="3"
 				FavorSizeOrSpeed="2"
-				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;..;..\..\..\..\modules\vtune"
-				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;NDEBUG;_CONSOLE;USE_REAL2INT;_CRT_SECURE_NO_DEPRECATE;VTUNE"
+				AdditionalIncludeDirectories="..\..\VMPI;..\..\vmbase;..\..\shell;..\..\extensions;..\..\MMgc;&quot;..\..\other-licenses\zlib&quot;;..\..\core;..\..\eval;.;.."
+				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;NDEBUG;_CONSOLE;USE_REAL2INT;_CRT_SECURE_NO_DEPRECATE;AVMFEATURE_VTUNE=1"
 				StringPooling="true"
 				MinimalRebuild="false"
 				ExceptionHandling="0"
@@ -766,7 +766,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/fixed:no"
 				AdditionalDependencies="winmm.lib JitProfiling.lib"
-				OutputFile="$(OutDir)/avmplus.exe"
+				OutputFile="$(OutDir)/avm.exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\..\..\..\modules\vtune\ia32\libcmt"
 				GenerateDebugInformation="true"
@@ -825,7 +825,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				FavorSizeOrSpeed="2"
-				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
+				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\vmbase;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
 				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;NDEBUG;_CONSOLE;USE_REAL2INT;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -854,7 +854,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions=""
 				AdditionalDependencies="winmm.lib"
-				OutputFile="$(OutDir)/avmplus_64.exe"
+				OutputFile="$(OutDir)/avm.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
@@ -914,7 +914,7 @@
 				AdditionalOptions="/Oy-"
 				Optimization="3"
 				FavorSizeOrSpeed="2"
-				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
+				AdditionalIncludeDirectories="..\..\VMPI;..\..\vmbase;..\..\shell;..\..\extensions;..\..\MMgc;&quot;..\..\other-licenses\zlib&quot;;..\..\core;..\..\eval;.;.."
 				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;NDEBUG;_CONSOLE;USE_REAL2INT;_CRT_SECURE_NO_DEPRECATE;MMGC_MEMORY_PROFILER"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -943,7 +943,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions=""
 				AdditionalDependencies="winmm.lib"
-				OutputFile="$(OutDir)/avmplus.exe"
+				OutputFile="$(OutDir)/avm.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
@@ -1001,7 +1001,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				FavorSizeOrSpeed="2"
-				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
+				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\vmbase;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
 				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;NDEBUG;_CONSOLE;USE_REAL2INT;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -1030,7 +1030,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions=""
 				AdditionalDependencies="winmm.lib"
-				OutputFile="$(OutDir)/avmplus_64.exe"
+				OutputFile="$(OutDir)/avm.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
@@ -1090,7 +1090,7 @@
 				Name="VCCLCompilerTool"
 				ExecutionBucket="7"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
+				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\vmbase;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
 				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;UNDER_CE=0x501;_WIN32_WCE=0x501;ARM;_ARM_;ARMV5;_DEBUG;DEBUG;_CONSOLE;USE_REAL2INT;_CRT_SECURE_NO_DEPRECATE;UNICODE"
 				MinimalRebuild="false"
 				ExceptionHandling="0"
@@ -1120,7 +1120,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions=""
 				AdditionalDependencies="mmtimer.lib corelibc.lib coredll.lib"
-				OutputFile="$(OutDir)/avmplus_d.exe"
+				OutputFile="$(OutDir)/avm.exe"
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
 				EntryPointSymbol="mainWCRTStartup"
@@ -1182,7 +1182,7 @@
 				Name="VCCLCompilerTool"
 				ExecutionBucket="7"
 				Optimization="2"
-				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
+				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\vmbase;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
 				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;UNDER_CE=0x501;_WIN32_WCE=0x501;ARM;_ARM_;ARMV5;NDEBUG;_CONSOLE;USE_REAL2INT;_CRT_SECURE_NO_DEPRECATE;UNICODE"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -1211,7 +1211,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions=""
 				AdditionalDependencies="mmtimer.lib corelibc.lib coredll.lib"
-				OutputFile="$(OutDir)/avmplus.exe"
+				OutputFile="$(OutDir)/avm.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
@@ -1276,7 +1276,7 @@
 				ExecutionBucket="7"
 				Optimization="3"
 				FavorSizeOrSpeed="2"
-				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
+				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\vmbase;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
 				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;NDEBUG;_CONSOLE;USE_REAL2INT;DEBUGGER;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -1304,7 +1304,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions=""
 				AdditionalDependencies="winmm.lib"
-				OutputFile="$(OutDir)/avmplus_s.exe"
+				OutputFile="$(OutDir)/avm.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
@@ -1367,7 +1367,7 @@
 				Name="VCCLCompilerTool"
 				ExecutionBucket="7"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\MMgc;..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
+				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\vmbase;..\..\MMgc;..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
 				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;_DEBUG;_CONSOLE;USE_REAL2INT;DEBUGGER;_CRT_SECURE_NO_DEPRECATE;MMGC_MEMORY_PROFILER"
 				MinimalRebuild="false"
 				ExceptionHandling="0"
@@ -1395,7 +1395,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/FIXED:NO"
 				AdditionalDependencies="winmm.lib DbgHelp.lib"
-				OutputFile="$(OutDir)/avmplus_sd.exe"
+				OutputFile="$(OutDir)/avm.exe"
 				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
@@ -1519,7 +1519,7 @@
 				Name="VCCLCompilerTool"
 				ExecutionBucket="7"
 				Optimization="2"
-				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
+				AdditionalIncludeDirectories="..\..\VMPI;..\..\shell;..\..\extensions;..\..\vmbase;..\..\MMgc;..\..\other-licenses\zlib;..\..\core;..\..\eval;.;.."
 				PreprocessorDefinitions="WIN32_LEAN_AND_MEAN;AVMSHELL_BUILD;WIN32;UNDER_CE=0x501;_WIN32_WCE=0x501;ARM;_ARM_;ARMV5;NDEBUG;_CONSOLE;USE_REAL2INT;_CRT_SECURE_NO_DEPRECATE;UNICODE"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -1548,7 +1548,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions=""
 				AdditionalDependencies="mmtimer.lib corelibc.lib coredll.lib"
-				OutputFile="$(OutDir)/avmplus.exe"
+				OutputFile="$(OutDir)/avm.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
@@ -1595,11 +1595,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\VMPI\AvmAssert.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\VMPI\AvmAssert.h"
+				RelativePath="..\..\vmbase\AvmAssert.cpp"
 				>
 			</File>
 			<File
@@ -1611,15 +1607,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\shell\ByteArrayGlue.cpp"
-				>
-			</File>
-			<File
 				RelativePath="..\..\shell\ConsoleOutputStream.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\shell\DataIO.cpp"
 				>
 			</File>
 			<File
@@ -1675,11 +1663,23 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\extensions\ST_mmgc_575631.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\extensions\ST_mmgc_580603.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\extensions\ST_mmgc_basics.cpp"
 				>
 			</File>
 			<File
 				RelativePath="..\..\extensions\ST_mmgc_dependent.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\extensions\ST_mmgc_finalize_uninit.cpp"
 				>
 			</File>
 			<File
@@ -1692,6 +1692,14 @@
 			</File>
 			<File
 				RelativePath="..\..\extensions\ST_mmgc_weakref.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\extensions\ST_vmbase_concurrency.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\extensions\ST_vmpi_threads.cpp"
 				>
 			</File>
 			<File
@@ -1757,19 +1765,15 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath="..\..\vmbase\AvmAssert.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\shell\avmshell.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\shell\ByteArrayGlue.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\shell\ConsoleOutputStream.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\shell\DataIO.h"
 				>
 			</File>
 			<File
@@ -1794,10 +1798,6 @@
 			</File>
 			<File
 				RelativePath="..\..\shell\FileInputStream.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\shell\genericzlib.h"
 				>
 			</File>
 			<File
@@ -1829,6 +1829,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\vmbase\vmbase.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\shell\WinFile.h"
 				>
 			</File>
@@ -1836,10 +1840,6 @@
 		<Filter
 			Name="AS3 Files"
 			>
-			<File
-				RelativePath="..\..\shell\ByteArray.as"
-				>
-			</File>
 			<File
 				RelativePath="..\..\extensions\Dictionary.as"
 				>
